Separating docs from code
